--- a/scss/about.scss
+++ b/scss/about.scss
@@ -1,6 +1,7 @@
 @import "resets";
 @import "fonts";
 @import "colors";
+@import "layout";
 @import "header";
 
 html {
@@ -18,6 +19,14 @@ main {
   padding-inline: 0;
 }
 
+section .separator {
+  width: 10%;
+  align-self: center;
+  background-color: #e74c33;
+  height: 2px;
+  margin-block: -1em 0.7em;
+}
+
 // Main infos
 
 .main-info {
@@ -25,13 +34,13 @@ main {
 
   position: relative;
   margin-top: -2rem;
-  padding-top: 5rem;
+  padding-top: 4rem;
   padding-bottom: 3em;
-  padding-left: 5%;
+  padding-inline: 5%;
   background-image: url('../assets/svg/1480796300.svg'), url('../assets/svg/piano-illustration.svg'), url('../assets/svg/Drums-Silhouette-2.svg'), url('../assets/svg/Geometric-Heart-4.svg');
   background-repeat: no-repeat, no-repeat, no-repeat, no-repeat;
   background-attachment: scroll, scroll, scroll, scroll, scroll;
-  background-position: 95% 90%, 84% 15%, 23% 12%, 50% 60%;
+  background-position: 95% 90%, 89% 10%, 28% 7%, 50% 60%;
   background-size: 100px, 50px, 50px, 200px;
 
   .pre-title {
@@ -44,6 +53,9 @@ main {
   .title {
     @include font-size-color($font-2, 1.9em, $primary-2);
 
+    width: 100%;
+    margin-left: 11%;
+
     .year {
       @include font-size-color($font-1, 1em, $primary-2);
     }
@@ -52,15 +64,15 @@ main {
   }
 
   .post-title {
-    @include font-size-color($font-3, 16px, #222);
+    @include font-size-color($font-3, 20px, #222);
 
-    border: 2px solid gray;
+    border: 1px solid gray;
     padding: 10px 15px;
-    background-color: #f7f7f7;
+    background-color: white;
     max-width: 90%;
     margin: 0 2% 0 2%;
     opacity: 0.9;
-    z-index: 80;
+    z-index: 1000;
 
     .post-title-desktop {
       display: none;
@@ -73,16 +85,17 @@ main {
 
   .contact-area {
     @include flex-column(center, 2px);
-    @include font-size-color($font-3, 16px, $primary-1);
+    @include font-size-color($font-3, 20px, $primary-1);
 
     width: 60%;
 
     .contact-email {
-        font-weight: bold;
+      font-weight: bold;
+      font-size: 22px;
 
-        a {
-            color: rgb(20, 19, 19);
-        }
+      a {
+        color: rgb(20, 19, 19);
+      }
     }
   }
 
@@ -108,6 +121,102 @@ main {
       cursor: pointer;
       color: $primary-2;
     }
+  }
+}
+
+.logo-section {
+  @include flex-column(center, 1em);
+  @include font-size-color($font-3, 20px, $primary-1);
+
+  background: white;
+  padding-inline: 5%;
+  padding-bottom: 2em;
+
+  .section-title {
+    @include font-size-color($font-3, 25px, $primary-1);
+  }
+
+  .logo-text-desktop {
+    display: none;
+  }
+
+  .logo-container {
+    @include flex-row(center, 15px);
+
+    padding: 10px;
+    border: 1px solid gray;
+
+    img {
+      width: 70%;
+      height: auto;
+    }
+  }
+}
+
+.full-separator {
+  width: 100%;
+  height: 1.5px;
+  background-color: gray;
+}
+
+.past-events {
+  @include flex-column(center, 20px);
+
+  padding-block: 1em;
+  width: 100%;
+  background-color: white;
+
+  .section-title {
+    @include font-size-color($font-3, 25px, $primary-1);
+  }
+
+  p {
+    @include font-size-color($font-3, 20px, $primary-1);
+    text-align: center;
+  }
+
+  .past-images-container {
+      @include flex-column(center, 10px);
+      padding-inline: 5vw;
+
+      .past-event {
+            margin: 0 auto;
+            @include flex-column(center, 0px);
+            @include font-size-color($font-3, 24px, white);
+            position: relative;
+
+            .pe-overlay {
+                position: absolute;
+                top: 0;
+                left: 4.7vw;
+                width: 90%;
+                height: 100%;
+                background: $primary-2;
+                z-index: 5000;
+                opacity: 0.7;
+            }
+
+            img {
+                width: 90%;
+            }
+
+            .pe-text {
+                @include flex-column(center, 30px);
+                @include font-size-color($font-3, 25px, white);
+
+                font-weight: bold;
+                position: absolute;
+                left: 50%;
+                top: 50%;
+                transform: translate(-50%, -50%);
+                width: 100%;
+                z-index: 10000;
+
+                .year {
+                    font-size: 45px;
+                }
+            }
+      }
   }
 }
 
