--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -15,7 +15,7 @@ footer {
 
         p {
             margin-block: 5px;
-            font-size: 14px;
+            font-size: 18px;
             color: $primary-1;
             font-weight: 200;
         }
