--- a/scss/header.scss
+++ b/scss/header.scss
@@ -47,7 +47,7 @@ header {
   position: static;
   opacity: 1;
   height: 100%;
-  z-index: 50000;
+  z-index: 500000;
 }
 
 .hamburger-icon .top-bar,
@@ -157,7 +157,7 @@ header {
   left: 0%;
   width: 100vw;
   height: 100vh;
-  z-index: 10000;
+  z-index: 100000;
   background: $home-main-bg;
   padding-top: 20%;
   padding-inline: 2% 10%;
